feat: add settings api

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 BACKEND_PORT=8080
 BACKEND_DATA_DIR="./storage"
 BACKEND_DB_FILE="./picframe.db"
+BACKEND_FRAME_SETTINGS_FILE="./frame_settings.toml"
 
 # Metrics Configuration
 PROMETHEUS_PORT=8081
