--- a/crates/frame_settings.toml
+++ b/crates/frame_settings.toml
@@ -1,4 +1,4 @@
 display_enabled = true
 rotate_enabled = true
-rotate_interval_secs = 10
-shuffle = false
+rotate_interval_secs = 12
+shuffle = true
