--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -13,33 +13,28 @@ path = "src/main.rs"
 anyhow = "1.0.98"
 argon2 = "0.5.3"
 axum = { version = "0.8.4", features = ["multipart"] }
-# axum-server = { version = "0.7.2", features = ["tls-rustls"] }
 chrono = "0.4.41"
 dotenv = "0.15.0"
 envy = "0.4.2"
 futures = "0.3.31"
-# hex = "0.4.3"
 image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
+libs = { path = "../libs" }
 metrics = "0.24.2"
 metrics-exporter-prometheus = "0.17.0"
 mime = "0.3.17"
-# nix = "0.30.1"
 once_cell = "1.21.3"
 password-hash = "0.5.0"
 prometheus = "0.14.0"
 r2d2 = "0.8.10"
 r2d2_sqlite = "0.28.0"
-# rand = "0.9.1"
 rand_core = { version = "0.9.3", features = ["os_rng"] }
 rouille = { version = "3.6.2", features = ["rustls"]}
 rusqlite = { version = "0.35.0", features = ["bundled"] }
 serde = { version = "1.0.219", features = ["derive"] }
-# serde_json = "1.0.140"
 sysinfo = "0.35.1"
 thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["full"] }
 toml = "0.8.22"
-# tower = "0.5.2"
 tower-http = { version = "0.6.2", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
