--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,43 +2,84 @@ name: release
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version (e.g., 1.0.0)'
+        required: true
+        type: string
+      crate:
+        description: 'Crate to release'
+        required: true
+        type: choice
+        options:
+          - backend
+          - display
+          - hash_once
+
+permissions:
+  contents: write
 
 jobs:
   release:
-    name: Release ${{ matrix.crate }} – ${{ matrix.platform }}
+    name: Release ${{ inputs.crate }} – ${{ matrix.platform }}
     runs-on: ${{ matrix.runs-on }}
 
     strategy:
       fail-fast: false
       matrix:
-        crate: [ backend, display, hash_once ]
-        platform: [ Linux-aarch64, macOS-x86_64 ]
-
+        platform: [Linux-aarch64]
         include:
           - platform: Linux-aarch64
             runs-on: ubuntu-24.04
-            target: aarch64-unknown-linux-gnu
-
-          - platform: macOS-x86_64
-            runs-on: macOS-latest
-            target: x86_64-apple-darwin
 
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
 
-      - name: Build ${{ matrix.crate }} for ${{ matrix.target }}
-        uses: houseabsolute/actions-rust-cross@v1
+      - name: "Install Rust"
+        uses: "actions-rs/toolchain@v1"
         with:
-          command: build
-          working-directory: crates/${{ matrix.crate }}
-          target: ${{ matrix.target }}
-          args: "--locked --release"
-          strip: true
+          toolchain: "stable"
 
-      - name: Publish ${{ matrix.crate }} to GitHub Release
-        uses: houseabsolute/actions-rust-release@v0
+      - name: "Cache cargo"
+        uses: "actions/cache@v4"
         with:
-          executable-name: ${{ matrix.crate }}
-          working-directory: crates/${{ matrix.crate }}
-          target: ${{ matrix.target }}
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          save-always: true
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-
+
+      - name: Cache SDL2 dependencies
+        if: inputs.crate == 'display'
+        uses: "actions/cache@v4"
+        with:
+          path: /var/lib/apt/lists
+          key: ${{ runner.os }}-apt-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-apt-
+
+      - name: Install SDL2 dependencies
+        if: inputs.crate == 'display'
+        run: |
+          sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
+          sudo apt-get update -y -qq
+          sudo apt-get install -y --no-install-recommends libsdl2-dev
+
+      - name: Build ${{ inputs.crate }}
+        run: |
+          cargo build --locked --release --manifest-path crates/${{ inputs.crate }}/Cargo.toml ${{ inputs.crate == 'display' && '--features=sdl2/bundled' || '' }}
+          cp crates/target/release/${{ inputs.crate }} ./${{ inputs.crate }}
+          strip -s ./${{ inputs.crate }}
+        env:
+          RUST_BACKTRACE: full
+
+      - name: Create Release for ${{ inputs.crate }}
+        uses: "softprops/action-gh-release@v1"
+        with:
+          files: ./${{ inputs.crate }}
+          tag_name: v${{ inputs.version }}
+          generate_release_notes: false
