--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,28 @@ jobs:
         run: |
           sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
           sudo apt-get update -y -qq
-          sudo apt-get install -y --no-install-recommends libasound2-dev
+          sudo apt-get install -y --no-install-recommends \
+            libasound2-dev \
+            libdbus-1-dev \
+            libdrm-dev \
+            libgbm-dev \
+            libgl1-mesa-dev \
+            libgles2-mesa-dev \
+            libpulse-dev \
+            libudev-dev \
+            libwayland-dev \
+            libx11-dev \
+            libxcursor-dev \
+            libxext-dev \
+            libxi-dev \
+            libxinerama-dev \
+            libxkbcommon-dev \
+            libxrandr-dev \
+            libxss-dev \
+            libxt-dev \
+            libxxf86vm-dev \
+            wayland-protocols \
+            x11proto-dev
 
       - name: "Install Rust"
         uses: "actions-rs/toolchain@v1"
@@ -86,6 +107,15 @@ jobs:
           aarch64-linux-gnu-strip -s ./${{ inputs.crate }}
         env:
           RUST_BACKTRACE: full
+          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_RUSTFLAGS: "-C target-feature=-crt-static"
+
+      - name: Verify binary architecture
+        run: |
+          file ./${{ inputs.crate }}
+          if ! file ./${{ inputs.crate }} | grep -q "ARM aarch64"; then
+            echo "Error: Binary is not built for aarch64!"
+            exit 1
+          fi
 
       - name: Create Release for ${{ inputs.crate }}
         uses: "softprops/action-gh-release@v1"
