--- a/crates/display/Cargo.toml
+++ b/crates/display/Cargo.toml
@@ -18,7 +18,7 @@ libs = { path = "../libs" }
 notify = "8.0.0"
 once_cell = "1.21.3"
 rand = "0.9.1"
-sdl2 = { version = "0.37.0" }
+sdl2 = { version = "0.37.0", default-features = false }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.45.0", features = ["full"] }
 toml = "0.8.22"
