--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         platform: [Linux-aarch64]
         include:
           - platform: Linux-aarch64
-            runs-on: ubuntu-24.04
+            runs-on: ubuntu-22.04
 
     steps:
       - name: Check out repository
@@ -102,12 +102,12 @@ jobs:
           export CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
           export PKG_CONFIG_ALLOW_CROSS=1
           export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
+          export RUSTFLAGS="-C target-cpu=generic -C link-arg=-Wl,--no-as-needed"
           cargo build --locked --release --target aarch64-unknown-linux-gnu --manifest-path crates/${{ inputs.crate }}/Cargo.toml ${{ inputs.crate == 'display' && '--features=sdl2/bundled' || '' }}
           cp crates/target/aarch64-unknown-linux-gnu/release/${{ inputs.crate }} ./${{ inputs.crate }}
           aarch64-linux-gnu-strip -s ./${{ inputs.crate }}
         env:
           RUST_BACKTRACE: full
-          CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_RUSTFLAGS: "-C target-feature=-crt-static"
 
       - name: Verify binary architecture
         run: |
