--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ on:
           - backend
           - display
           - hash_once
+          - sdl_test
 
 permissions:
   contents: write
@@ -49,7 +50,7 @@ jobs:
           sudo apt-get install -y gcc-aarch64-linux-gnu g++-aarch64-linux-gnu binutils-aarch64-linux-gnu
 
       - name: Install SDL2 dependencies
-        if: inputs.crate == 'display'
+        if: inputs.crate == 'sdl_test'
         run: |
           sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
           sudo apt-get update -y -qq
@@ -103,7 +104,7 @@ jobs:
           export PKG_CONFIG_ALLOW_CROSS=1
           export PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig
           export RUSTFLAGS="-C target-cpu=generic -C link-arg=-Wl,--no-as-needed"
-          cargo build --locked --release --target aarch64-unknown-linux-gnu --manifest-path crates/${{ inputs.crate }}/Cargo.toml ${{ inputs.crate == 'display' && '--features=sdl2/bundled' || '' }}
+          cargo build --locked --release --target aarch64-unknown-linux-gnu --manifest-path crates/${{ inputs.crate }}/Cargo.toml ${{ inputs.crate == 'sdl_test' && '--features=sdl2/bundled' || '' }}
           cp crates/target/aarch64-unknown-linux-gnu/release/${{ inputs.crate }} ./${{ inputs.crate }}
           aarch64-linux-gnu-strip -s ./${{ inputs.crate }}
         env:
