fix(display): adjust image rotation by using exif

--- a/crates/display/Cargo.toml
+++ b/crates/display/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/main.rs"
 anyhow = "1.0.98"
 dotenv = "0.15.0"
 envy = "0.4.2"
+kamadak-exif = "0.6.1"
 image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
 libs = { path = "../libs" }
 notify = "8.0.0"
