chore: cleanup manifest files, docs, and sdl_test crate

--- a/crates/hash_once/Cargo.toml
+++ b/crates/hash_once/Cargo.toml
@@ -3,6 +3,7 @@ name = "hash_once"
 version = "0.1.0"
 edition = "2021"
 authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
+repository = "https://github.com/adrior11/picture_frame"
 license = "MIT"
 
 [[bin]]
