--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -3,6 +3,7 @@ name = "backend"
 version = "0.1.0"
 edition = "2024"
 authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
+repository = "https://github.com/adrior11/picture_frame"
 license = "MIT"
 
 [[bin]]
