--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cache apt dependencies
-        uses: "actions/cache@v4"
+        uses: actions/cache@v4
         with:
           path: /var/lib/apt/lists
           key: ${{ runner.os }}-apt-${{ hashFiles('**/Cargo.lock') }}
@@ -77,14 +77,14 @@ jobs:
             wayland-protocols \
             x11proto-dev
 
-      - name: "Install Rust"
-        uses: "actions-rs/toolchain@v1"
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: "stable"
           target: aarch64-unknown-linux-gnu
 
-      - name: "Cache cargo"
-        uses: "actions/cache@v4"
+      - name: Cache cargo
+        uses: actions/cache@v4
         with:
           path: |
             ~/.cargo/bin/
@@ -120,7 +120,7 @@ jobs:
           fi
 
       - name: Create Release for ${{ inputs.crate }}
-        uses: "softprops/action-gh-release@v1"
+        uses: softprops/action-gh-release@v1
         with:
           files: ./${{ inputs.crate }}
           tag_name: v${{ inputs.version }}
