--- a/crates/backend/Cargo.toml
+++ b/crates/backend/Cargo.toml
@@ -28,8 +28,7 @@ password-hash = "0.5.0"
 prometheus = "0.14.0"
 r2d2 = "0.8.10"
 r2d2_sqlite = "0.28.0"
-rand_core = { version = "0.9.3", features = ["os_rng"] }
-rouille = { version = "3.6.2", features = ["rustls"]}
+rand_core  = { version = "0.6.4", features = ["getrandom"] }
 rusqlite = { version = "0.35.0", features = ["bundled"] }
 serde = { version = "1.0.219", features = ["derive"] }
 sysinfo = "0.35.1"
