--- a/crates/hash_once/Cargo.toml
+++ b/crates/hash_once/Cargo.toml
@@ -12,6 +12,4 @@ path = "src/main.rs"
 
 [dependencies]
 argon2 = "0.5.3"
-# rand = "0.9.1"
-# rand_core = { version = "0.9.3", features = ["os_rng"] }
-rouille = { version = "3.6.2", features = ["rustls"]}
+rand_core  = { version = "0.6.4", features = ["getrandom"] }
