fix(ci): add SDL2 dependency to rust.yml

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,9 @@ on:
 permissions:
   contents: write
 
+env:
+  CARGO_TERM_COLOR: always
+
 jobs:
   release:
     name: Release ${{ inputs.crate }} – ${{ matrix.platform }}
