--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,17 +28,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Cache Cargo
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-            crates/target
-          key: ${{ runner.os }}-cargo-${{ matrix.rust }}-${{ hashFiles('crates/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-${{ matrix.rust }}-
-
       - name: Install SDL2 dependencies
         run: |
           sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
@@ -51,13 +40,20 @@ jobs:
           toolchain: ${{ matrix.rust }}
           components: clippy, rustfmt
 
+      - name: Cache Cargo
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "crates -> crates/target"
+          key: ${{ matrix.rust }}
+          save-if: ${{ github.event_name != 'pull_request' }}
+
       - name: Cargo build
         working-directory: ./crates
-        run: cargo build --workspace --all-targets --all-features --verbose
+        run: cargo build --verbose
 
       - name: Cargo clippy
         working-directory: ./crates
-        run: cargo clippy --workspace --all-targets --all-features -- -D warnings
+        run: cargo clippy -- -D warnings
 
       - name: Cargo fmt
         working-directory: ./crates
