feat(backend): add IPv4 address configuration for API and Prometheus

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,16 @@
 # Backend Configuration
 BACKEND_PORT=8080
+BACKEND_IPV4_ADDRESS="0.0.0.0"
 BACKEND_DATA_DIR="./storage"
 BACKEND_DB_FILE="./picframe.db"
 BACKEND_FRAME_SETTINGS_FILE="./frame_settings.toml"
 
 # Metrics Configuration
 PROMETHEUS_PORT=8081
+PROMETHEUS_IPV4_ADDRESS="0.0.0.0"
 PROMETHEUS_REFRESH_INTERVAL=15 # seconds
+
+# Grafana Configuration
 GF_SECURITY_ADMIN_USER=root
 GF_SECURITY_ADMIN_PASSWORD=example
 
