--- a/crates/libs/Cargo.toml
+++ b/crates/libs/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT"
 crate-type = ["lib"]
 
 [dependencies]
+dirs = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.45.0", features = ["full"] }
 toml = "0.8.22"
