--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Backend Configuration
 BACKEND_PORT=8080
 BACKEND_IPV4_ADDRESS="0.0.0.0"
-BACKEND_DATA_DIR="./storage"
-BACKEND_DB_FILE="./picframe.db"
-BACKEND_FRAME_SETTINGS_FILE="./frame_settings.toml"
+BACKEND_DATA_DIR="storage"
+BACKEND_DB_FILE="picframe.db"
+BACKEND_FRAME_SETTINGS_FILE="frame_settings.toml"
 
 # Metrics Configuration
 PROMETHEUS_PORT=8081
