--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,7 @@ jobs:
         uses: Swatinem/rust-cache@v2
         with:
           workspaces: "crates -> crates/target"
+          key: ${{ matrix.crate }}
 
       - name: Build ${{ matrix.crate }}
         run: |
