feat(app): add haptic feedback on API response; update image upload handling

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,4 @@ PROMETHEUS_REFRESH_INTERVAL=15 # seconds
 GF_SECURITY_ADMIN_USER=root
 GF_SECURITY_ADMIN_PASSWORD=example
 
-LOG_LEVEL=debug
+LOG_LEVEL=info
